--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <!-- Income Classification in the US -->
             <div class="row"  style="padding-top:10%;">
-                <div class="col align-self-center">  
+                <div class="col-sm-6 align-self-center">  
                     <a href="https://www.kaggle.com/mcarter23/adult-income-usa-investigation"><h4><b>Data Investigation: How to earn over $50K annually in the US</b></h4></a>                        
                     <p> A personal project of mine which investigates the driving factors in predict where or not an individual earns above $50,000 annually in the US. 
                         The project determines that your captial gain or positive returns on investments, being married or in a civil parntership and individual's number 
@@ -113,7 +113,7 @@
                         summay plots to determine how each feature effects the model's prediction. 
                      </p>
                 </div>
-                <div class="col">
+                <div class="col-sm-6">
                     <a href="https://www.kaggle.com/mcarter23/adult-income-usa-investigation">
                     <h5> Model's SHAP Summary Plot </h5 >
                     <img class="w3-image" src="shap summary plot.png" alt="SHAP value summary plot">
