--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         </div>
     </div>
 
-    <div style="margin-right: 15%;margin-left: 15%;">
+    <div class="container">
         <!-- About me -->
-        <div style="padding-top: 25%;text-align: center;" id="about">
+        <div style="padding-top: 25%;text-align: center;height:100%;" id="about">
             <h3> About Me </h3>
             <br>
             <p> Most of my academic career has been shaped by those around me. Specifically, I spent a considerable about of time in boarding school and university college meeting
@@ -79,7 +79,7 @@
 
             <!-- GMCC Case Competition-->
             <div class="row"  style="padding-top:5%">
-                <div class="col align-self-center">  
+                <div class="col-sm-6 align-self-center">  
                     <a href="https://www.facebook.com/events/1720997278207048/"><h4><b>Good Shepherd Microfinance Case Competition</b></h4></a>                        
                     <p> The GMCC provides students with an insight into the world of microfinance and consulting. The case competition was on a live project named 
                     LauchME, a low-interest small loan scheme for low-income
@@ -95,8 +95,8 @@
                     Please note the video of the interactive map was uploaded to a teammate's account, <a href="https://www.linkedin.com/in/connor-price-339392180/">Connor Price</a>, though it is my work.
                      </p>
                 </div>
-                <div class="col">
-                    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTwUC5MxAGUKSypM2Kr7zKNWVhxyThvjCKT6R0JP-VY-DlupIxkc-Vz8qQUQm1y7RXFAPGAj8wbKZyR/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299 " allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>                    
+                <div class="col-sm-6">
+                    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTwUC5MxAGUKSypM2Kr7zKNWVhxyThvjCKT6R0JP-VY-DlupIxkc-Vz8qQUQm1y7RXFAPGAj8wbKZyR/embed?start=false&loop=false&delayms=3000" frameborder="0" style="width:100%" width="480" height="299 " allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>                    
                 </div>
             </div>
 
@@ -125,28 +125,28 @@
         </div> 
         
         <!-- Charity -->
-        <div style="margin:15%; padding-top: 10%;text-align: center;" id="charity">
-            <h3> Charity</h3>
-            <div class="row"  style="">
-                <div class="col align-self-center"> 
-                    <a href="https://www.stgc.uwa.edu.au/georges-gents"> <h4> <b> George’s Gents for Lady Lawley Cottage </b></h4></a>
-                    <br>
-                    <p> Last year I was given the opportunity to raise $36,000 for Lady Lawley, a facility that offers respite care services for children and young adults with a wide 
-                        range of multiple and complex medical needs. Together with three mates, we braved the 20km race with the hopes of raising some money for those in need, one of whom
-                        is a close friend. The challenge involved displine in training, teamwork in the water and dedication to finish, and was an immensely rewarding experience.
-                    </p>
-                    <br><br>
-                    <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F10NewsPer%2Fvideos%2F355365828396194%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+        <div style="margin-top:15%;  padding-top: 10%;text-align: center;height:100%;" id="charity">
+                <h3> Charity</h3>
+                <a href="https://www.stgc.uwa.edu.au/georges-gents"> <h4> <b> George’s Gents for Lady Lawley Cottage </b></h4></a>
+                <br>
+                <p> Last year I was given the opportunity to raise $36,000 for Lady Lawley, a facility that offers respite care services for children and young adults with a wide 
+                    range of multiple and complex medical needs. Together with three mates, we braved the 20km race with the hopes of raising some money for those in need, one of whom
+                    is a close friend. The challenge involved displine in training, teamwork in the water and dedication to finish, and was an immensely rewarding experience.
+                </p>
+                <br><br>
+                <div >
+                    <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F10NewsPer%2Fvideos%2F355365828396194%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden;width:100%;height:50vw;" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
                 </div>
+            </div>
             </div>
             <br>
         </div>
         
         <!-- contact -->
-        <div style="margin: 5%;text-align: center;" id="contact">
+        <div style="text-align: center;" id="contact">
             <h3> Contact</h3>
-            <div class="row"  style="">
-                <div class="col align-self-center"> 
+            <div class="row">
+                <div class="col-sm align-self-center"> 
                     <p> Phone: +6143469801 <br>
                         Email: <a href="mailto:matthewcarter2301@gmail.com" target="_top">matthewcarter2301@gmail.com</a>
                         <br> <br>
