--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <h3> Charity</h3>
                 <a href="https://www.stgc.uwa.edu.au/georges-gents"> <h4> <b> George’s Gents for Lady Lawley Cottage </b></h4></a>
                 <br>
-                <p> Last year I was given the opportunity to raise $36,000 for Lady Lawley, a facility that offers respite care services for children and young adults with a wide 
+                <p> Last year I was given the opportunity to help raise $36,000 for Lady Lawley, a facility that offers respite care services for children and young adults with a wide 
                     range of multiple and complex medical needs. Together with three mates, we braved the 20km race with the hopes of raising some money for those in need, one of whom
                     is a close friend. The challenge involved displine in training, teamwork in the water and dedication to finish, and was an immensely rewarding experience.
                 </p>
