--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div class="container">
         <!-- About me -->
-        <div style="padding-top: 25%;text-align: center;height:100%;" id="about">
+        <div style="padding-top: 25%;padding-bottom:5%;text-align: center;height:100%;" id="about">
             <h3> About Me </h3>
             <br>
             <p> Most of my academic career has been shaped by those around me. Specifically, I spent a considerable about of time in boarding school and university college meeting
