--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h3> About Me </h3>
             <br>
             <p> Most of my academic career has been shaped by those around me. Specifically, I spent a considerable about of time in boarding school and university college meeting
-                 a range of different people from across the globe. During this time I have been fortunate enough to learn how to communicate and coordinate with a large group of 
+                 a range of different people from across the globe. During this time I have been fortunate enough to learn how to communicate and corporate with a large group of 
                  contrasting people. In addition to my interpersonal and communication abilities, I have a passion for technology and how it can be used to better our lives. This passion
                  is realized through the considerable amount of my free time I utilize to build personal projects and work within the community. Case studies and competitions are also an 
                  interest of mine. I am currently participating in the Microsoft Protege Competition and was a campus finalist for last year's Good Shepard Microfinance Case Competition.
