--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                         of years in education are the main factors in determining income over and above $50,000 annually. Though there are some interesting interactions between
                         capital losses and age. Click the title of this section for more information.
                         <br>
-                        The project makes use of a XGBoost classifier to construct the model, Permutation Importatance lists, and SHAP (SHapley Additive exPlanations) values and 
-                        summay plots to determine how each feature effects the model's prediction. 
+                        The project makes use of a XGBoost classifier to construct the model. Permutation Importatance lists, SHAP (SHapley Additive exPlanations) values and 
+                        summay plots were used to determine how each feature effects the model's prediction. 
                      </p>
                 </div>
                 <div class="col-sm-6">
