--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                     <a href="https://www.kaggle.com/mcarter23/adult-income-usa-investigation"><h4><b>Data Investigation: How to earn over $50K annually in the US</b></h4></a>                        
                     <p> A personal project of mine which investigates the driving factors in predicting where or not an individual earns above $50,000 annually in the US. 
                         The project determines that your captial gain or positive returns on investments, being married or in a civil parntership and individual's number 
-                        of years in education are the main factors in determining income over and above $50,000 annually. Though there are some interesting interactions between
-                        capital losses and age. Click the title of this section for more information.
+                        of years in education are the main factors in determining income over and above $50,000 annually. Though there are some interesting interactions between both
+                        capital losses and age, and their effect on our predictions. Click the title of this section for more information.
                         <br>
                         The project makes use of a XGBoost classifier to construct the model. Permutation Importatance lists, SHAP (SHapley Additive exPlanations) values and 
                         summay plots were used to determine how each feature effects the model's prediction. 
