--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="col-sm-6 align-self-center" style="max-width: 800px; max-height: 400px; text-align: center; vertical-align: middle;">
                 <h1> Matthew Carter</h1>
                 <h3>Economic and Data Science Student</h3>
-                <p style="margin-left:15%;margin-right:15%;margin-top: 2%;"> The stories data can tell us has always fascinated me and it is my ambition to use these stories for the
+                <p style="margin-left:15%;margin-right:15%;margin-top: 2%;"> The stories data can tell us have always fascinated me and it is my ambition to use these stories for the
                 betterment of society.
                 </p>  
                 
@@ -77,10 +77,10 @@
             <h3> About Me </h3>
             <br>
             <p> Most of my academic career has been shaped by those around me. Specifically, I spent a considerable about of time in boarding school and university college meeting
-                 a range of different people from across the globe. During this time I have been fortunate enough to learn how to communicate and corporate with a large group of 
+                 a range of different people from across the globe. During this time I have been fortunate enough to learn how to communicate and cooperate with a large group of 
                  contrasting people. In addition to my interpersonal and communication abilities, I have a passion for technology and how it can be used to better our lives. This passion
                  is realized through the considerable amount of my free time I utilize to build personal projects and work within the community. Case studies and competitions are also an 
-                 interest of mine. I am currently participating in the Microsoft Protege Competition and was a campus finalist for last year's Good Shepard Microfinance Case Competition.
+                 interest of mine. Currently I am participating in the Microsoft Protege Competition and was a campus finalist in last year's Good Shepard Microfinance Case Competition.
             </p>
         </div>
 
@@ -94,12 +94,11 @@
                 <div class="col-sm-6 align-self-center">  
                     <a href="https://www.facebook.com/events/1720997278207048/"><h4><b>Good Shepherd Microfinance Case Competition</b></h4></a>                        
                     <p> The GMCC provides students with an insight into the world of microfinance and consulting. The case competition was on a live project named 
-                    LauchME, a low-interest small loan scheme for low-income
-                    care workers who want to start a business.
+                    LauchME, a low-interest small loan scheme for low-income care workers who want to start a business.
                     <br> 
                     The role involved determining the location of a new base of operations for the program.
                     Using ABS census data I create an <a href="https://www.youtube.com/watch?v=rRFzwzLUb1w">interactive map (click here)</a> of the target audience's location.
-                    In addition, I created a product development strategy to increase funding, which we call the Bank and Established Business Incentive Scheme. 
+                    In addition, I created a product development strategy to increase funding, which we called the Bank and Established Business Incentive Scheme. 
                     See the slides to the right for more information.
                     <br>
                     Skills, such as communication, leadership, and creativity were all utilized in the process in creating this case.
@@ -117,9 +116,9 @@
                 <div class="col-sm-6 align-self-center">  
                     <a href="https://www.kaggle.com/mcarter23/adult-income-usa-investigation"><h4><b>Data Investigation: How to earn over $50K annually in the US</b></h4></a>                        
                     <p> A personal project of mine which investigates the driving factors in predicting where or not an individual earns above $50,000 annually in the US. 
-                        The project determines that your captial gain or positive returns on investments, being married or in a civil parntership and individual's number 
-                        of years in education are the main factors in determining income above $50,000 annually. Though there are some interesting interactions between both
-                        capital losses and age, and their effect on our predictions. Click the title of this section for more information.
+                        The project determines that your captial gain or positive returns on investments, being married or in a civil parntership and the number of years you spend educating yourself 
+                        are the main factors in determining income above $50,000 annually. In addition, there are some interesting interactions between both
+                        capital losses and age, and their effect on my predictions. Click the title of this section for more information.
                         <br>
                         The project makes use of a XGBoost classifier to construct the model. Permutation Importatance lists, SHAP (SHapley Additive exPlanations) values and 
                         summay plots were used to determine how each feature effects the model's prediction. 
