--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div style="padding-top: 25%;padding-bottom:5%;text-align: center;height:100%;" id="about">
             <h3> About Me </h3>
             <br>
-            <p> Most of my academic career has been shaped by those around me. Specifically, I spent a considerable about of time in boarding school and university college meeting
+            <p> Most of my academic career has been shaped by those around me. Specifically, I spent a considerable amount of time in boarding school and university college meeting
                  a range of different people from across the globe. During this time I have been fortunate enough to learn how to communicate and cooperate with a large group of 
                  contrasting people. In addition to my interpersonal and communication abilities, I have a passion for technology and how it can be used to better our lives. This passion
                  is realized through the considerable amount of my free time I utilize to build personal projects and work within the community. Case studies and competitions are also an 
