--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="col-sm-6 align-self-center" style="max-width: 800px; max-height: 400px; text-align: center; vertical-align: middle;">
                 <h1> Matthew Carter</h1>
-                <h3>Economic and Data Science Student</h3>
+                <h3>Economics and Data Science Student</h3>
                 <p style="margin-left:15%;margin-right:15%;margin-top: 2%;"> The stories data can tell us have always fascinated me and it is my ambition to use these stories for the
                 betterment of society.
                 </p>  
@@ -116,7 +116,7 @@
                 <div class="col-sm-6 align-self-center">  
                     <a href="https://www.kaggle.com/mcarter23/adult-income-usa-investigation"><h4><b>Data Investigation: How to earn over $50K annually in the US</b></h4></a>                        
                     <p> A personal project of mine which investigates the driving factors in predicting where or not an individual earns above $50,000 annually in the US. 
-                        The project determines that your captial gain or positive returns on investments, being married or in a civil parntership and the number of years you spend educating yourself 
+                        The project determines that your captial gain or positive returns on investments, being married or in a civil partnership and the number of years you spend educating yourself 
                         are the main factors in determining income above $50,000 annually. In addition, there are some interesting interactions between both
                         capital losses and age, and their effect on my predictions. Click the title of this section for more information.
                         <br>
@@ -142,7 +142,7 @@
                 <br>
                 <p> Last year I was given the opportunity to help raise $36,000 for Lady Lawley, a facility that offers respite care services for children and young adults with a wide 
                     range of multiple and complex medical needs. Together with three mates, we braved the 20km race with the hopes of raising some money for those in need, one of whom
-                    is a close friend. The challenge involved displine in training, teamwork in the water and dedication to finish, and was an immensely rewarding experience.
+                    is a close friend. The challenge involved discipline in training, teamwork in the water and dedication to finish, and was an immensely rewarding experience.
                 </p>
                 <br><br>
                 <div >
@@ -161,8 +161,6 @@
                     <p> Phone: +61434698152 <br>
                         Email: <a href="mailto:matthewcarter2301@gmail.com" target="_top">matthewcarter2301@gmail.com</a>
                         <br> <br>
-                        <a href="https://www.facebook.com/profile.php?id=100006391867974"><img src="fbicon.png" alt="fbicon" width="35" height="35"></a>  
-                        <a href="https://www.linkedin.com/in/matthew-c-476367130/"><img src="lnkdinicon.png" alt="lnkinicon" width="35" height="35"></a>
                     </p>
                 </div>
             </div>
