--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
                     <p> Phone: +61434698152 <br>
                         Email: <a href="mailto:matthewcarter2301@gmail.com" target="_top">matthewcarter2301@gmail.com</a>
                         <br> <br>
+                        <a href="https://www.linkedin.com/in/matthew-c-476367130/"><img src="lnkdinicon.png" alt="lnkinicon" width="35" height="35"></a>
                     </p>
                 </div>
             </div>
