--- a/index.html
+++ b/index.html
@@ -62,10 +62,8 @@
             </div>
             <div class="col-sm-6 align-self-center" style="max-width: 800px; max-height: 400px; text-align: center; vertical-align: middle;">
                 <h1> Matthew Carter</h1>
-                <h3>Economics and Data Science Student</h3>
-                <p style="margin-left:15%;margin-right:15%;margin-top: 2%;"> The stories data can tell us have always fascinated me and it is my ambition to use these stories for the
-                betterment of society.
-                </p>  
+                <h3>Data Analyst </h3>
+                
                 
             </div>
         </div>
